# galagame

./: .clang-format  .editorconfig  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  build_mingw_release.bat  run_game.bat  setup_env.ps1  提交说明.txt
assets/: README_MEDIA.md
data/enemies/: melee.json  ranged.json
data/stages/: stage01.json
data/weapons/: pistol.json  rifle.json  shotgun.json
include/: BulletItem.h  CollisionManager.h  CombatLoop.h  CombatScene.h  EnemyBulletItem.h  EnemyDirector.h  EnemyEntity.h  FeedbackSystem.h  GameManager.h  LightDirector.h  MainWindow.h  PickupItem.h  PlayerEntity.h  ResourceManager.h  RunContext.h  SceneManager.h  TransitionController.h  TrapItem.h  WeaponSystem.h
src/: BulletItem.cpp  CollisionManager.cpp  CombatLoop.cpp  CombatScene.cpp  EnemyBulletItem.cpp  EnemyDirector.cpp  EnemyEntity.cpp  FeedbackSystem.cpp  GameManager.cpp  LightDirector.cpp  MainWindow.cpp  PickupItem.cpp  PlayerEntity.cpp  ResourceManager.cpp  RunContext.cpp  SceneManager.cpp  TransitionController.cpp  TrapItem.cpp  WeaponSystem.cpp  main.cpp
